# aws_cloud_vuln_scanner

./: README.md
aws-vuln-scanner/: pyproject.toml  requirements.txt
aws-vuln-scanner/examples/: sample_output.html  sample_output.json
aws-vuln-scanner/iam/: scanner-policy.json
aws-vuln-scanner/scanner/: aws_client.py  engine.py  main.py
aws-vuln-scanner/scanner/report/: __init__.py  html_report.py  json_report.py
aws-vuln-scanner/scanner/report/templates/: report_template.html
aws-vuln-scanner/scanner/rules/: __init__.py  base.py  cloudtrail_rules.py  ec2_rules.py  iam_rules.py  rds_rules.py  s3_rules.py
aws-vuln-scanner/tests/: test_rules.py
