[project]
name = "aws-vuln-scanner"
version = "0.1.0"
description = "A rule-based vulnerability and misconfiguration scanner for AWS accounts."
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.34",
    "botocore>=1.34",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "moto[iam,s3,ec2,rds,cloudtrail,sts]>=5.0"]

[project.scripts]
aws-vuln-scanner = "scanner.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["scanner*"]
